@@ -1,3 +1,9 @@
+202103140
+Check PICs on startup
+Install and Update write to LogFile
+Move winterhill.ini
+Multiple bugfixes
+
 202103080
 Correct whdriver
 
